[package]
name = "bb"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.16", features = ["full"] }
dotenv = "0.15"

# for config parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# for error handling
thiserror = "1.0"
anyhow = "1.0"

# for logging
log = "0.4"
simple_logger = "0.5"

# for database
diesel = { version = "2.0", features = ["sqlite", "mysql", "chrono"] }
chrono = "0.4" # for datetime